test/typechecker.d/invalid/fns6.surc.bad
n: Integer = 5

f(x: Integer): Integer = x + 1

g(x: Integer): Integer = fndo
	var r <- x & n
	return r
